[package]
name = "ai-ipf-aging-toolset"
version = "0.1.0"
edition = "2021"
authors = ["Davide Vitiello"]
description = "AI-driven toolset for IPF and aging research (inspired by Insilico Medicine research)"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Data processing and scientific computing
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"

# Machine learning and AI
# burn = { version = "0.13", features = ["train", "autodiff", "std"] }
# burn-tch = "0.13"

# Bioinformatics and genomics
bio = "2.3"
# rust-htslib = "0.44"

# Statistics and mathematical operations
statrs = "0.17"
nalgebra = "0.33"
chrono = { version = "0.4", features = ["serde"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dirs = "5.0"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"

# File I/O and data formats
csv = "1.3"
# parquet = "0.2"
# arrow = "50.0"

# Network and HTTP
reqwest = { version = "0.11", features = ["json"] }

# Text processing
regex = "1.0"

# Database
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"

# [[bench]]
# name = "aging_clock_benchmark"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
